<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.camerakit.CameraKitView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:keepScreenOn="true"
            app:camera_facing="back"
            app:camera_focus="continuous" />

        <com.example.fanfightcamera.helper.FocusView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image"
                android:layout_marginTop="5dp"
                android:text="@string/step_2_of_3"
                android:textColor="@color/colorStepText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/image"
                android:text="@string/scan_dl_front"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_below="@id/tv1"
                android:layout_alignBaseline="@id/tv2"
                android:layout_alignBottom="@id/tv2"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tv2"
                android:baseline="8dp"
                android:src="@drawable/ic_info" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/driving_license" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_gallery"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/capture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="#00000000"
                android:scaleType="fitXY"
                android:src="@drawable/ic_camera" />

            <ImageView
                android:id="@+id/flash"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="13dp"
                android:src="@drawable/ic_flash_off" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>